# docker-redcap

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  README_DOCKER.md  configure-db.sh  docker-compose-phpmyadmin.yml  docker-compose.yml  docker-entrypoint.sh  example.env  redcap-overrides.ini
girder_uploader_v1.0.0/: GirderUploaderModule.php  README.MD  config.json
girder_uploader_v1.0.0/css/: style.css
girder_uploader_v1.0.0/js/: deidentify-worker.js  girder-uploader.js
girder_uploader_v1.0.0/wasm/dicom_deid/: Cargo.toml  README.md
girder_uploader_v1.0.0/wasm/dicom_deid/pkg/: dicom_deid.d.ts  dicom_deid.js  dicom_deid_bg.wasm  dicom_deid_bg.wasm.d.ts  package.json
girder_uploader_v1.0.0/wasm/dicom_deid/src/: dicom.rs  lib.rs  schiller.rs  xml.rs
