[package]
name = "dicom_deid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
dicom-anonymization = "0.3.1"
dicom-object = "0.6"
quick-xml = "0.32"
uuid = { version = "1.17", features = ["js", "v4"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
